Refactor and cleanup project